find_package(OpenCV QUIET)
if(OpenCV_FOUND)
    otr_module(tracker-pt-base STATIC)
    target_include_directories(${self} SYSTEM PUBLIC ${OpenCV_INCLUDE_DIRS})
    target_link_libraries(${self} opencv_imgproc opentrack-cv opencv_core)
    set_property(TARGET ${self} PROPERTY OUTPUT_NAME "pt-base")
endif()
add_subdirectory(module)
