include(opentrack-opencv)
if(OpenCV_FOUND)
    otr_module(tracker-pt-base STATIC)
    target_include_directories(${self} SYSTEM PUBLIC ${OpenCV_INCLUDE_DIRS})
    target_link_libraries(${self} opencv_imgproc opentrack-cv opencv_core opentrack-video)
    set_property(TARGET ${self} PROPERTY OUTPUT_NAME "pt-base")
endif()
add_subdirectory(module)
