include(opentrack-opencv)
find_package(OpenCV QUIET)
if(OpenCV_FOUND)
    foreach(k core)
        otr_install_lib("opencv_${k}" "${opentrack-libexec}")
    endforeach()
    otr_module(tracker-pt-base STATIC)
    target_include_directories(${self} SYSTEM PUBLIC ${OpenCV_INCLUDE_DIRS})
    target_link_libraries(${self} PRIVATE opentrack-cv opencv_core)
    set_property(TARGET ${self} PROPERTY OUTPUT_NAME "pt-base")
endif()
add_subdirectory(module)
