if(WIN32)
    opentrack_boilerplate(opentrack-tracker-rs)
    if(opentrack-64bit)
        set(subdir amd64)
    else()
        set(subdir ia32)
    endif()
    set(libpath "${CMAKE_SOURCE_DIR}/tracker-rs/rs_impl/bin/${subdir}/rs-impl.lib")
    add_custom_target(opentrack-tracker-rs-impl DEPENDS ${libpath})
    add_dependencies(opentrack-tracker-rs opentrack-tracker-rs-impl)
    target_link_libraries(opentrack-tracker-rs "${libpath}" advapi32)
    install(FILES "${CMAKE_SOURCE_DIR}/tracker-rs/redist/intel_rs_sdk_runtime_websetup_10.0.26.0396.exe" DESTINATION ./contrib/ ${opentrack-perms})
    install(FILES "${CMAKE_SOURCE_DIR}/tracker-rs/redist/RS_EULA.rtf" DESTINATION ./contrib/ ${opentrack-perms})
endif()
