if(WIN32)
    set(SDK_TOBII_EYEX "" CACHE PATH "")
    if(SDK_TOBII_EYEX)
        set(porked NO-INSTALL)
        otr_module(tracker-tobii-eyex ${porked})
        target_link_libraries(opentrack-tracker-tobii-eyex opentrack-spline)
        set(tobii-libdir ${SDK_TOBII_EYEX}/lib/x86/)
        set(tobii-dll ${tobii-libdir}/Tobii.EyeX.Client.dll)
        # we only care about the .lib for MSVC++ build anyway
        set(tobii-link ${tobii-libdir}/Tobii.EyeX.Client.lib)
        target_include_directories(opentrack-tracker-tobii-eyex PRIVATE ${CMAKE_SOURCE_DIR}/spline)
        target_link_libraries(opentrack-tracker-tobii-eyex ${tobii-link} opentrack-spline)
        # we only ever use the C headers due to Microsoft CRT ABI incompatibility with GNU
        set(tobii-incdir ${SDK_TOBII_EYEX}/include/eyex)
        target_include_directories(opentrack-tracker-tobii-eyex SYSTEM PUBLIC ${tobii-incdir})

        if(NOT "!${porked}" STREQUAL "!NO-INSTALL")
            install(FILES ${tobii-dll} DESTINATION ${opentrack-hier-pfx} ${opentrack-perms})
            if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
                file(TO_CMAKE_PATH "$ENV{SystemRoot}" sysroot)
                if (IS_DIRECTORY "${sysroot}/SysWOW64")
                    set(src "${sysroot}/SysWOW64")
                else()
                    set(src "${sysroot}/System32")
                endif()
                install(FILES "${src}/msvcp110.dll" DESTINATION ${opentrack-hier-pfx} ${opentrack-perms})
                install(FILES "${src}/msvcr110.dll" DESTINATION ${opentrack-hier-pfx} ${opentrack-perms})
            endif()
        endif()
    endif()
endif()
